--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "ali-pakdel"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "aliipkdl"
   impactstory      :
   lastfm           :
   linkedin         : "ali-pakdel"
@@ -107,7 +107,7 @@ author:
   pinterest        :
   soundcloud       :
   stackoverflow    :
-  steam            :
+  steam            : "ali_zrx"
   tumblr           :
   twitter          :
   vine             :
