--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,8 @@
-# Authors
-
-Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
-
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+Ali Pakdel Samadi:
+  name        : "Ali Pakdel Samadi"
+  uri         : "http://ali-pakdel.github.io"
+  email       : "aliipakdel98@gmail.com"
+  bio         : "Computer Engineering B.Sc. at the University of Tehran"
+  avatar      : ""
+  twitter     : ""
+  google_plus : ""
