--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /education/    
 
   - title: "CV"
-    url: /CV/    
+    url: /cv/    
     
   - title: "Transcript"
     url: /transcript/
