Few changes added

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "ali-pakdel"
   google_plus      :
   keybase          :
-  instagram        : "aliipkdl"
+  instagram        :
   impactstory      :
   lastfm           :
   linkedin         : "ali-pakdel"
